[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/8-bit Arcade In.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/PauseMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 82
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 51
font_data = ExtResource( 1 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.207843, 0.203922, 0.203922, 0.388235 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 40.0
margin_top = 147.0
margin_right = 312.0
margin_bottom = 452.0
custom_constants/separation = 24

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 272.0
margin_bottom = 113.0
custom_fonts/font = SubResource( 1 )
text = "Game
 Paused"
align = 1

[node name="Resume" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 137.0
margin_right = 272.0
margin_bottom = 177.0
custom_fonts/font = SubResource( 2 )
text = "Resume"

[node name="MainMenu" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 201.0
margin_right = 272.0
margin_bottom = 241.0
custom_fonts/font = SubResource( 2 )
text = "Main Menu"

[node name="Exit" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 265.0
margin_right = 272.0
margin_bottom = 305.0
custom_fonts/font = SubResource( 2 )
text = "Exit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
